tests/base/invalid/ListEmpty_CompileFail_1.whiley
import * from whiley.lang.*

void f(int x):
    sys.out.println(str(x))

void ::main(System sys,[string] args):
    f([])
